syntax = "proto3";

package randomPackage;
option go_package = "github.com/kien6034/arbitrage-bot/random";


service Random {
    rpc PingPong(PingRequest) returns (PongResponse) {};
}

message PingRequest {
    string message = 1;
}

message PongResponse {
    string message = 1;
}